# sysinfo_utils

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  gpu.md  os.md
.github/workflows/: ci.yml  rust.yml  rust_fmt.yml
gpu_info/: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
gpu_info/.github/workflows/: ci.yml  rust.yml  rust_fmt.yml
gpu_info/examples/: async_example.rs  async_performance_demo.rs  async_update_demo.rs  cache.rs  cache_benchmark.rs  cache_performance.rs  cli.rs  cross_platform.rs  detailed.rs  enhanced_cache.rs  provider_manager.rs  version.rs
gpu_info/src/: adl_api.rs  async_api.rs  cache_utils.rs  extended_info.rs  ffi_utils.rs  gpu_info.rs  gpu_manager.rs  integration_tests.rs  lib.rs  macros.rs  main.rs  metric_value.rs  monitoring.rs  nvml_api.rs  provider_manager.rs  query.rs  vendor.rs
gpu_info/src/amd/: mod.rs
gpu_info/src/intel/: mod.rs
gpu_info/src/libs/: nvml.lib
gpu_info/src/linux/: amd.rs  mod.rs
gpu_info/src/macos/: mod.rs
gpu_info/src/mode/: gpu.rs  manager.rs  mod.rs  vendor.rs
gpu_info/src/nvidia/: mod.rs
gpu_info/src/providers/: amd.rs  intel.rs  mod.rs  nvidia.rs
gpu_info/src/providers/linux/: amd.rs  intel.rs  mod.rs  nvidia.rs
gpu_info/src/providers/macos/: builder.rs  cache.rs  config.rs  macos.rs  metrics.rs  mod.rs  provider.rs  router.rs
gpu_info/src/providers/macos/backends/: iokit.rs  metal.rs  mod.rs  powermetrics.rs  system_profiler.rs
gpu_info/src/providers/windows/: intel.rs  intel_metrics.rs  mod.rs  pdh.rs
gpu_info/src/qualcomm/: mod.rs
gpu_info/src/test/: amd_provider_tests.rs  async_api_tests.rs  cache_edge_cases.rs  cache_tests.rs  extended_info_tests.rs  ffi_utils_tests.rs  format_methods_tests.rs  gpu_info_builder_tests.rs  gpu_manager_tests.rs  linux_providers_tests.rs  linux_tests.rs  metric_value_tests.rs  mod.rs  monitoring_tests.rs  property_tests.rs  provider_manager_tests.rs  test.rs
gpu_info/src/test_data/linux/amd_rx_6800/sys/class/drm/card0/device/: device  product_name
gpu_info/src/test_data/linux/intel_uhd_630/sys/class/drm/card0/device/: device  product_name  vendor
gpu_info/src/test_data/linux/nvidia_rtx_3080/sys/class/drm/card0/device/: device  product_name  vendor
gpu_info/src/unknown/: mod.rs  unknown.rs
gpu_info/src/windows/: amd.rs  intel.rs  main.c  mod.rs  nvidia.rs
src/: gpu_info.rs  lib.rs  system_cli.rs  system_info_lib.rs
system_cli/: .gitignore  Cargo.toml  README.md
system_cli/src/: cli.rs  main.rs
system_cli/tests/: cli.rs
system_info/: .gitignore  Cargo.toml
system_info/examples/: version.rs
system_info/src/: architecture.rs  bit_depth.rs  lib.rs  system_info.rs  system_matcher.rs  system_os.rs  system_uname.rs  system_version.rs
system_info/src/aix/: mod.rs
system_info/src/android/: mod.rs
system_info/src/dragonfly/: mod.rs
system_info/src/emscripten/: mod.rs
system_info/src/freebsd/: mod.rs
system_info/src/illumos/: mod.rs
system_info/src/linux/: mod.rs  system_file_release.rs  system_release_lsb.rs
system_info/src/macos/: mod.rs
system_info/src/netbsd/: mod.rs
system_info/src/openbsd/: mod.rs
system_info/src/redox/: mod.rs
system_info/src/tests/: basic.rs
system_info/src/unknown/: mod.rs
system_info/src/windows/: mod.rs  winapi.rs
system_info_lib/: .gitignore  .prettierrc.json  .prettierrc.json~  Cargo.toml  LICENSE.md  Makefile  README.md
system_info_lib/examples/: basic.rs  builder.rs  detailed.rs  extensions.rs  version.rs
system_info_lib/src/: architecture.rs  bit_depth.rs  ext.rs  kernel_version.rs  lib.rs  prelude.rs  system_info.rs  system_matcher.rs  system_os.rs  system_uname.rs  system_version.rs
system_info_lib/src/aix/: mod.rs
system_info_lib/src/android/: mod.rs
system_info_lib/src/dragonfly/: mod.rs
system_info_lib/src/emscripten/: mod.rs
system_info_lib/src/freebsd/: mod.rs
system_info_lib/src/illumos/: mod.rs
system_info_lib/src/linux/: mod.rs  system_file_release.rs  system_release_lsb.rs
system_info_lib/src/macos/: mod.rs
system_info_lib/src/netbsd/: mod.rs
system_info_lib/src/openbsd/: mod.rs
system_info_lib/src/redox/: mod.rs
system_info_lib/src/tests/: basic.rs  md_doc.rs
system_info_lib/src/unknown/: mod.rs
system_info_lib/src/windows/: mod.rs  winapi.rs
system_info_lib/tests/: integration_tests.rs
