[package]
name = "sysinfo_utils"
version = "0.1.0"
authors = ["Andrew Nevsky <hopperplayer0@gmail.com>"]
edition = "2021"
description = "A utility library for system and GPU information"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/sysinfo_utils"
keywords = ["system", "gpu", "info", "monitoring"]
categories = ["hardware-support", "system-tools"]

[lib]
name = "sysinfo_utils"
path = "src/lib.rs"

[dependencies]
gpu_info = { path = "./gpu_info" }
system_cli = { path = "./system_cli" }
system_info_lib = { path = "./system_info_lib" }
log = "0.4"

[workspace]
members = ["gpu_info", "system_cli", "system_info_lib"]

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
