[package]
name = "gpu_info"
version = "0.0.1"
authors = ["Andrew Nevsky <hopperplayer0@gmail.com>"]
description = "A simple library to get GPU information"
homepage = "https://github.com/vremyavnikuda/sysinfo_utils"
repository = "https://github.com/vremyavnikuda/gpu_info"
readme = "README.md"
license = "MIT"
categories = ["command-line-interface", "filesystem"]
keywords = ["gpu", "nvidia", "info", "information", "amd"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "gpu_info"
path = "src/lib.rs"

[features]
default = ["serde", "serde_json"]
nvidia = []
intel = []
amd = []
# macOS-specific features
macos-iokit = ["core-foundation", "io-kit-sys"]
macos-metal = ["metal-rs"]
macos-full = ["macos-iokit", "macos-metal"]

[dependencies]
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
cc = "1.2.18"
env_logger = "0.11.8"
glob = "0.3.2"
mockall = "0.13.1"
libloading = "0.8.8"
imp = "0.1.0"
rand = "0.8"
windows = { version = "0.52", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
once_cell = "1.19"
tokio = { version = "1.0", features = ["rt", "sync", "macros", "time"] }

[dev-dependencies]
pretty_assertions = "1.0"
doc-comment = "0.3"
tokio = { version = "1.0", features = ["rt", "sync", "macros", "rt-multi-thread", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "0.9", optional = true }
io-kit-sys = { version = "0.4", optional = true }
metal-rs = { version = "0.27", optional = true, package = "metal" }
