[package]
name = "system_cli"
version = "0.0.1"
authors = ["Andrew Nevsky <hopperplayer0@gmail.com>"]
description = "Detect the operating system type and version."
homepage = "https://github.com/vremyavnikuda/system_info"
repository = "https://github.com/vremyavnikuda/system_info"
keywords = ["system_cli", "system_os", "system_type", "system_version", "system_info"]
categories = ["command-line-interface", "system"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "system_info"
path = "src/main.rs"

[dependencies]
system_info = { version = "0.0.1", default-features = true, path = "../system_info" }
log.workspace = true
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
