[package]
name = "system_cli"
version = "0.0.1"
authors = ["Andrew Nevsky <hopperplayer0@gmail.com>"]
description = "Detect the operating system type and version."
homepage = "https://github.com/vremyavnikuda/system_info"
repository = "https://github.com/vremyavnikuda/system_info"
keywords = ["system_cli", "system_info", "gpu_info"]
categories = ["command-line-interface", "filesystem"]
license = "MIT"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "system_info"
path = "../system_info_lib/examples/version.rs"

[[bin]]
name = "gpu_info"
path = "../gpu_info/examples/cli.rs"

[dependencies]
system_info = { version = "0.0.1", default-features = true, path = "../system_info_lib" }
gpu_info = { version = "0.0.1", default-features = true, path = "../gpu_info" }
log.workspace = true
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
