[package]
name = "system_info"
authors = ["Andrew Nevsky <hopperplayer0@gmail.com>"]
description = "System detect information"
readme = "README.MD"
keywords = ["system","system_os","system_version","system_info"]
categories = ["system"]
version = "0.0.1"
edition = "2024"

include = [
    "Cargo.toml",
    "src/**/*.rs",
    "README.MD",
]

[features]
default= ["serde"]


[dependencies]
log.workspace = true
serde = { version = "1.0.217", optional = true, features = ["derive"] }
serde_derive = "1.0"
tempfile = "3.15.0"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
pretty_assertions = "1"
doc-comment = "0.3"
