[package]
name = "system_info_lib"
version = "0.0.1"
authors = ["Andrew Nevsky <hopperplayer0@gmail.com>"]
description = "System detect information"
homepage = "https://github.com/vremyavnikuda/system_info"
repository = "https://github.com/vremyavnikuda/system_info_lib"
readme = "README.md"
keywords = ["system", "system_os", "system_version", "system_info"]
categories = ["os"]
license = "MIT"
edition = "2021"
rust-version = "1.56"

include = ["Cargo.toml", "src/**/*.rs", "README.MD"]

[features]
default = ["serde"]

[dependencies]
log = { workspace = true }
serde = { version = "1.0.217", optional = true, features = ["derive"] }
serde_derive = "1.0"
tempfile = "3.15.0"
windows = "0.59.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
pretty_assertions = "1"
doc-comment = "0.3"
proptest = "1.5"
